# stellaris-evolved

./: .gitignore  README.md  README_MODDABILITY.md  descriptor.mod
events/: !!!_modcompat_events.txt  !!_ancient_relics_arcsite_events_1.txt  !!_anomaly_events_1.txt  !!_anomaly_events_2.txt  !!_aquatics_events.txt  !!_colony_events_1.txt  !!_country_events_2.txt  !!_crime_events.txt  !!_distant_stars_events_1.txt  !!_distant_stars_events_2.txt  !!_distant_stars_events_3.txt  !!_faction_events.txt  !!_federation_events_1.txt  !!_first_contact_NPC_country_types_events.txt  !!_first_contact_dlc_situation_events.txt  !!_first_contact_events.txt  !!_galactic_community_events.txt  !!_game_start.txt  !!_leader_events_2.txt  !!_leviathans_events_1.txt  !!_machine_age_situation_events_1.txt  !!_machine_age_situation_events_2.txt  !!_mandate_events.txt  !!_marauder_events.txt  !!_megastructure_events_2.txt  !!_necroids_events_1.txt  !!_necroids_events_2.txt  !!_nemesis_crisis_events.txt  !!_nemesis_emperor_events.txt  !!_on_action_events.txt  !!_on_action_events_1.txt  !!_on_action_events_2.txt  !!_origin_events_1.txt  !!_origin_events_3.txt  !!_origin_events_5.txt  !!_origin_events_machine_age.txt  !!_overload_specialist_events.txt  !!_paragon_events.txt  !!_paragon_events_2.txt  !!_planet_destruction_events.txt  (+45 more)
flags/: colors.txt
tools/uml/: README.md  README_MODDABILITY_TEMPLATE.md  cli.py  config.yml  copy_locs.py  icon.py  local_config.yml.template  modifier.py  pyproject.toml  requirements.txt  types.py  uml_config_schema.json  uml_types.py  utils.py
(+4939 files in other folders)
